# kokoronia

./: .dockerignore  .gitignore  .gitignore_new  Dockerfile  README.md  README_new.md  csv_to_database_analysis.py  device1_audio_recorder_clean.py  docker-compose.yml  env_sample  example_conversation.txt  gcs_uploader_clean.py  interests_extraction.py  interests_extraction_clean.py  main_clean.py  pyproject.toml  pyproject_main.toml  regression_dataset_real_labels.jsonl  requirements.txt  requirements_main.txt  setup_environment.sh  system_flow.html  test_finetuned_model.py  test_recording_flow.md  transcribe_audio_clean.py  transcribe_audio_from_gcs.py  zero_shot_learning.py  zero_shot_learning_clean.py
accounts/: admin.py  models.py
accounts_corrupted/: models.py  urls.py  views.py
accounts_corrupted/migrations/: 0001_initial.py
docs/ミーティング/発表資料/: 25_0312_サービス_ユースケース.pptx  25_0523_ローカルで作るよ.pptx  25_0612_進捗.pptx  25_0626_【up_update】ローカルで作るよ.pptx  25_0711_進捗.pptx  25_0725_進捗.pptx
docs/対話の評価/: ログ書くよお.docx
logs_tensorboard/emotion_sft_20250824_121654/: events.out.tfevents.1756005414.shirakawa-momokonoMacBook-Air.local.73403.0
logs_tensorboard/emotion_sft_20250824_122021/: events.out.tfevents.1756005621.shirakawa-momokonoMacBook-Air.local.73664.0
logs_tensorboard/emotion_sft_20250824_122543/: events.out.tfevents.1756005943.shirakawa-momokonoMacBook-Air.local.74132.0
logs_tensorboard/emotion_sft_20250824_130107/: events.out.tfevents.1756008067.shirakawa-momokonoMacBook-Air.local.77258.0
mock_data/: user_list.xlsx
mock_data/1_conversation_script/script/: conv1.csv  conv2.csv  conv3.csv  conv4.csv  (+1 more)
mock_data/mock_user/: test_user1_2.csv  test_user2_1.csv  test_user2_2.csv  test_user3_1.csv  test_user3_2.csv  test_user4_1.csv  test_user4_2.csv  test_user5_1.csv  test_user5_2.csv
new_accounts/: models.py
new_mock_data/: README.md
new_project/: settings.py  urls.py
openai_sft_outputs/: safe_train_data_test_20250101_120000.jsonl  test_data_test_20250101_120000.jsonl  valid_data_test_20250101_120000.jsonl
others/: markov_chain.py
project/: settings.py
scripts/: export_openapi_schema.py  main.py  main_web.py  test_environment.py
src/ca_tech_lounge/: __init__.py
templates/: base.html
wandb/: latest-run
wandb/offline-run-20250824_123420-jntzt3lq/: run-jntzt3lq.wandb
wandb/offline-run-20250824_130359-wng114b4/: run-wng114b4.wandb
ミーティング/発表資料/: 25_0328_アプリ化に向けて.pptx
(+79 files in other folders)
