[project]
name = "lounge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "moi_moisture", email = "138105872+momok47@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.2.2",
    "matplotlib>=3.10.0",
    "japanize-matplotlib>=1.1.3",
    "sox>=1.5.0",
    "pyyaml>=6.0.2",
    "ipykernel>=6.29.5",
    "mecab-python3>=1.0.10",
    "unidic>=1.1.0",
    "google-cloud>=0.34.0",
    "pyaudio>=0.2.14",
    "django>=5.2",
    "google-cloud-storage>=3.1.0",
    "google-cloud-speech>=2.32.0",
    "google>=3.0.0",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "fugashi>=1.5.1",
    "unidic-lite>=1.0.8",
    "mecab>=0.996.11",
    "ipadic>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyaudio>=0.2.14",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lounge"]
